Remove duplicate -XX:+PrintGCDetails analysis.